--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-timer": "^1.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
