--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,13 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-timer": "^1.0.6",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
